FixEventServiceImpl